2013-12-09  Miguel de Dios  <miguel.dedios@artica.es>
	
	* src/pandroid_event_viewer/pandorafms/EventList.java: fixed the
	incident dialog when two times.
	
	* src/pandroid_event_viewer/pandorafms/Options.java: updated the
	api password for the pandora_demo in firefly.

2013-12-09  Miguel de Dios  <miguel.dedios@artica.es>
	
	* src/pandroid_event_viewer/pandorafms/PandroidEventviewerActivity.java,
	src/pandroid_event_viewer/pandorafms/EventList.java,
	src/pandroid_event_viewer/pandorafms/Main.java: fixed Java warnings.

2013-12-05  Miguel de Dios  <miguel.dedios@artica.es>
	
	* src/pandroid_event_viewer/pandorafms/Main.java: setted the
	standar style for group and tag dropbox.

2013-12-05  Miguel de Dios  <miguel.dedios@artica.es>
	
	* src/pandroid_event_viewer/pandorafms/Options.java: fixed the save
	state of check in background, before it run but didn't show.
	
	* res/layout/main.xml: added id for the tag.

2013-12-05  Miguel de Dios  <miguel.dedios@artica.es>
	
	* src/pandroid_event_viewer/pandorafms/Info.java,
	src/pandroid_event_viewer/pandorafms/About.java: changed the url
	of about.

2013-12-05  Miguel de Dios  <miguel.dedios@artica.es>
	
	* src/pandroid_event_viewer/pandorafms/Main.java: fixed to check the
	pandora version for 4 series, this is for to hidden the tag filter.

2013-12-05  Miguel de Dios  <miguel.dedios@artica.es>
	
	* src/pandroid_event_viewer/pandorafms/API.java: fixed the offset
	parameter for the api.

2013-12-04  Miguel de Dios  <miguel.dedios@artica.es>
	
	* src/pandroid_event_viewer/pandorafms/EventList.java,
	src/pandroid_event_viewer/pandorafms/Main.java: fixed java
	warnings.
	
	* src/pandroid_event_viewer/pandorafms/PandroidEventviewerActivity.java:
	fixed the hack for old pandoras.

2013-12-04  Miguel de Dios  <miguel.dedios@artica.es>
	
	* src/pandroid_event_viewer/pandorafms/About.java: removed the
	unused import.
	
	* src/pandroid_event_viewer/pandorafms/EventList.java,
	res/values-ja/strings.xml, res/values/strings.xml,